[project]
name = "flu-shot-learning"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "arunkhattri6", email = "arunkhattri6@gmail.com"},
]
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.3",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.1",
    "pandas-profiling>=3.2.0",
    "pyarrow>=14.0.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.12.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "python-lsp-server>=1.9.0",
    "flake8>=7.0.0",
    "pylint>=3.0.3",
    "pytest>=7.4.4",
    "ipython>=8.20.0",
    "notebook>=7.0.7",
]
